@@ -23,6 +23,10 @@ ImageMagick Changes</font></font></font></b></td>
 <dl>
 <dd>
 <pre>
+2002-01-21  Cristy  &lt;cristy@mystic.es.dupont.com&gt;
+  * Fixed occasional small memory leak associated with exceptions.
+  * Persistent cache is no longer updated (MPC coder).
+
 2002-01-14  Bob Friesenhahn  &lt;bfriesen@simple.dallas.tx.us&gt;
   * configure.ac: Removed test for libwmf/font.h.
 
