@@ -1,5 +1,6 @@
 2002-01-21  Cristy  <cristy@mystic.es.dupont.com>
   * Fixed occasional small memory leak associated with exceptions.
+  * Persistent cache is no longer updated (MPC coder).
 
 2002-01-14  Bob Friesenhahn  <bfriesen@simple.dallas.tx.us>
   * configure.ac: Removed test for libwmf/font.h.
